# FaceRecognitionTest

./: .gitignore  README.md  pyproject.toml
facerecognitiontest/: __init__.py  __main__.py  image.py  recognizer.py  test.py  window.py
