[project]
name = "facerecognitiontest"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "uPiscium", email = "upiscium@gmail.com" }
]
dependencies = [
    "face-recognition>=1.3.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.rye.scripts]
all = "python facerecognitiontest"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/facerecognitiontest"]
